syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "Identity.proto";
import "NullableGrpcDate.proto";
import "CustomerOnSABase.proto";

message UpdateCustomerRequest {
    int32 CustomerOnSAId = 1;
    
    CustomerOnSABase Customer = 2;
}

message UpdateCustomerResponse {
    google.protobuf.Int32Value PartnerId = 1;

    repeated cis.types.Identity CustomerIdentifiers = 2;
}
